tree-sitter-hledger-timeclock/test/corpus/timeclock.txt
=================
timeclock example
=================

i 2015/03/30 09:00:00 some:account name  optional description after two spaces
o 2015/03/30 09:20:00
i 2015/03/31 22:21:45 another account
o 2015/04/01 02:00:34

---
(source_file
    (clock_in
        (simple_date)
        (time)
        (account_name)
        (tx_description))
    (clock_out
        (simple_date)
        (time))
    (clock_in
    (simple_date)
        (time)
        (account_name))
    (clock_out
    (simple_date)
        (time)))


=====
timeclock sample
=====
i 2009/03/27 09:00:00 projects:a
o 2009/03/27 17:00:34
i 2009/03/31 22:21:45 personal:reading:online
o 2009/04/01 02:00:34
i 2009/04/02 09:00:00 projects:b
o 2009/04/02 17:00:34
---
(source_file
    (clock_in
        (simple_date)
        (time)
        (account_name))
    (clock_out
        (simple_date)
        (time))
    (clock_in
        (simple_date)
        (time)
        (account_name))
    (clock_out
        (simple_date)
        (time))
    (clock_in
        (simple_date)
        (time)
        (account_name))
    (clock_out
        (simple_date)
        (time)))

=====
timeclock iso-dates
=====
i 2009-03-27 09:00:00 projects:a
o 2009-03-27 17:00:34
i 2009-03-31 22:21:45 personal:reading:online
o 2009-04-01 02:00:34
i 2009-04-02 09:00:00 projects:b
o 2009-04-02 17:00:34
---
(source_file
    (clock_in
        (simple_date)
        (time)
        (account_name))
    (clock_out
        (simple_date)
        (time))
    (clock_in
        (simple_date)
        (time)
        (account_name))
    (clock_out
        (simple_date)
        (time))
    (clock_in
        (simple_date)
        (time)
        (account_name))
    (clock_out
        (simple_date)
        (time)))
